--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/apache"]
 	path = modules/apache
 	url = https://github.com/example42/puppet-apache.git
+[submodule "modules/mysql"]
+	path = modules/mysql
+	url = https://github.com/example42/puppet-mysql.git
