--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/mysql"]
 	path = modules/mysql
 	url = https://github.com/example42/puppet-mysql.git
+[submodule "modules/php"]
+	path = modules/php
+	url = https://github.com/example42/puppet-php.git
